--- a/Project-Documentation/mdm/land-people-mdm/scripts/county_assessor_table_processing/urbansim_tables/DS INPUT County Urbansim Parcels Column Mapping Tool.ipynb
+++ b/Project-Documentation/mdm/land-people-mdm/scripts/county_assessor_table_processing/urbansim_tables/DS INPUT County Urbansim Parcels Column Mapping Tool.ipynb
@@ -4,7 +4,31 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Urbansim Parcels Column Mapping Tool"
+    "# Urbansim Parcels Column Mapping Tool\n",
+    "\n",
+    "## How to use this notebook:\n",
+    "\n",
+    "1. Pull this notebook from Github\n",
+    "    - Clone or copy this Github repository: https://github.com/BayAreaMetro/DataServices\n",
+    "    - This notebook is in the folder `Project-Documentation/mdm/land-people-mdm/scripts/county_assessor_table_processing/urbansim_tables`\n",
+    "2. Run this notebook and select/enter the appropriate field name mapping (in SQL format) for each UrbanSim Buildings field\n",
+    "3. Create a folder containing this notebook's output folders (column_map_csvs, column_map_dicts) and copy it to this [Box folder](https://mtcdrive.app.box.com/folder/76889542701)\n",
+    "4. Write a note in the Slack channel #urbansim-data-collab [?] informing the DataViz and UrbanSim teams that you made an update"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Requirements: run this cell first if necessary to install necessary Python libraries\n",
+    "\n",
+    "! pip install boto3\n",
+    "! pip install s3fs\n",
+    "! conda install -y -c anaconda psycopg2\n",
+    "! pip install sodapy\n",
+    "! pip install sqlalchemy-redshift"
    ]
   },
   {
