--- a/Project-Documentation/mdm/land-people-mdm/scripts/county_assessor_table_processing/urbansim_tables/DS INPUT UrbanSim Dataset Exploration.ipynb
+++ b/Project-Documentation/mdm/land-people-mdm/scripts/county_assessor_table_processing/urbansim_tables/DS INPUT UrbanSim Dataset Exploration.ipynb
@@ -1,12 +1,34 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# UrbanSim Data Set Exploration\n",
+    "\n",
+    "\n",
+    "This notebook is a template that shows how to identify UrbanSim datasets of interest (based on tags) on Socrata, pull data from Socrata into a pandas DataFrame, and begin exploratory data analysis (EDA). It is meant to be a starting point for each data steward to begin their own EDA. Once data stewards have completed their EDA, please add a folder containing the modified notebook and any outputs to this [Box folder](https://mtcdrive.app.box.com/folder/76889542701)\n",
+    "\n",
+    "## How to use this notebook:\n",
+    "\n",
+    "1. Run this notebook and perform your own EDA\n",
+    "2. Save your modified notebook and any outputs in a folder and copy that folder to this [Box folder](https://mtcdrive.app.box.com/folder/76889542701)\n",
+    "3. Communicate your updates\n",
+    "    - write data-specific notes via BASIS\n",
+    "    - write general communications in the Slack channel #urbansim-data-collab [?] informing the DataViz and UrbanSim teams that you made an update to the Box folder\n",
+    "      \n",
+    "Example EDA steps: https://kite.com/blog/python/data-analysis-visualization-python\n",
+    "\n",
+    "- unique vals, misspellings, missing vals, data cleaning steps"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Requirements: run this cell first to install necessary Python libraries\n",
+    "# Requirements: run this cell first if necessary to install necessary Python libraries\n",
     "\n",
     "! pip install boto3\n",
     "! pip install s3fs\n",
@@ -35,7 +57,6 @@
    "metadata": {},
    "source": [
     "# UrbanSim Data Set Exploration\n",
-    "\n",
     "\n",
     "Pythonic Approach to Managing Socrata Data Assets using SodaPy\n",
     "\n",
@@ -118,15 +139,6 @@
     "## Socrata Credentials\n",
     "\n",
     "Socrata credentials for this notebook are managed by Kaya Tollas (ktollas@bayareametro.gov)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# How to use this notebook:\n",
-    "\n",
-    "This notebook shows how to identify datasets of interest (based on tags) on Socrata, pull data from Socrata into a pandas DataFrame, and begin exploratory data analysis (EDA)"
    ]
   },
   {
@@ -440,11 +452,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "pulling data in 4 chunks of 100000 rows each\n",
+      "pulling chunk 0\n",
+      "pulling chunk 1\n",
+      "pulling chunk 2\n",
+      "pulling chunk 3\n"
+     ]
+    }
+   ],
    "source": [
     "general_plan_id = 'cc3g-fj4w'\n",
     "general_plan = pull_df_from_socrata(general_plan_id)"
@@ -486,9 +510,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "pulling data in 1 chunks of 2979 rows each\n",
+      "pulling chunk 0\n"
+     ]
+    }
+   ],
    "source": [
     "rz_codes_id = 'qdrp-c5ra'\n",
     "rz_codes = pull_df_from_socrata(rz_codes_id)"
@@ -530,9 +563,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "pulling data in 2 chunks of 100000 rows each\n",
+      "pulling chunk 0\n",
+      "pulling chunk 1\n"
+     ]
+    }
+   ],
    "source": [
     "regional_zoning_id = 'q2p6-hbrp'\n",
     "regional_zoning = pull_df_from_socrata(regional_zoning_id)"
@@ -585,9 +628,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0, 26)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "jdf = gp_zoning.merge(gp_codes, left_on='zoning_id', right_on='recid')\n",
     "jdf.shape"
