--- a/Project-Documentation/mdm/land-people-mdm/scripts/county_assessor_table_processing/urbansim_tables/DS INPUT UrbanSim Dataset Exploration Template.ipynb
+++ b/Project-Documentation/mdm/land-people-mdm/scripts/county_assessor_table_processing/urbansim_tables/DS INPUT UrbanSim Dataset Exploration Template.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%matplotlib inline"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -9,17 +18,16 @@
     "\n",
     "This notebook is a template that shows how to identify UrbanSim datasets of interest (based on tags) on Socrata, pull data from Socrata into a pandas DataFrame, and begin exploratory data analysis (EDA). It is meant to be a starting point for each data steward to begin their own EDA. Once data stewards have completed their EDA, please add a folder containing the modified notebook and any outputs to this [Box folder](https://mtcdrive.app.box.com/folder/76889542701)\n",
     "\n",
+    "**NOTE**: Please make and edit a COPY of this notebook and add your name as a prefix to the filename and remove the Template suffix (e.g. the resulting filename would look like this: `<Your name> DS INPUT UrbanSim Dataset Exploration.ipynb`)\n",
+    "\n",
     "## How to use this notebook:\n",
     "\n",
-    "1. Run this notebook and perform your own EDA\n",
-    "2. Save your modified notebook and any outputs in a folder and copy that folder to this [Box folder](https://mtcdrive.app.box.com/folder/76889542701)\n",
+    "1. Make a copy of this notebook to perform your own EDA\n",
+    "2. Save your modified notebook copy and any outputs in a folder and copy that folder to this [Box folder](https://mtcdrive.app.box.com/folder/76889542701)\n",
     "3. Communicate your updates\n",
-    "    - write data-specific notes via BASIS\n",
-    "    - write general communications in the Slack channel #urbansim-data-collab [?] informing the DataViz and UrbanSim teams that you made an update to the Box folder\n",
-    "      \n",
-    "Example EDA steps: https://kite.com/blog/python/data-analysis-visualization-python\n",
-    "\n",
-    "- unique vals, misspellings, missing vals, data cleaning steps"
+    "    - write data-specific notes via the BASIS dataset Feedback feature\n",
+    "    - write general communications in the Slack channel #urbansim-data-collab\n",
+    "    - open a GitHub issue [here](https://github.com/BayAreaMetro/DataServices/issues)"
    ]
   },
   {
@@ -39,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,79 +153,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1. Find data sets of interest from Socrata\n",
-    "\n",
-    "First pull the Socrata data assets table to get metadata for all data assets."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "socrata_asset_table_id = 'rs6b-4exy'\n",
-    "socrata_asset_table = pull_df_from_socrata(socrata_asset_table_id)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# these are the relevant columns for selecting relevant datasets\n",
-    "keep_cols = ['api_endpoint', 'category', 'dataset_link',\n",
-    "             'endpoint', 'keywords', 'name', 'u_id', 'visits']\n",
-    "\n",
-    "socrata_asset_table = socrata_asset_table[keep_cols]\n",
-    "socrata_asset_table.head()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Filter the datasets to the ones of interest by filtering on tag"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def filter_datasets_by_tag(filter_tag):\n",
-    "    urbansim_table_data = socrata_asset_table[socrata_asset_table['keywords'].str.contains(filter_tag) == True]\n",
-    "    filtered_datasets = urbansim_table_data[['name', 'u_id', 'keywords']]\n",
-    "    return filtered_datasets"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "urbansim_datasets = filter_datasets_by_tag('urbansim')\n",
-    "urbansim_datasets"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "basis_tables = filter_datasets_by_tag('basis')\n",
-    "basis_tables"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 2. Pull these datasets into pandas DataFrames"
+    "## 1. Pull these datasets into pandas DataFrames"
    ]
   },
   {
@@ -316,46 +252,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### General Plan and Zoning"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### Pull General Plan and Zoning 2018"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "pulling data in 22 chunks of 100000 rows each\n",
-      "pulling chunk 0\n",
-      "pulling chunk 1\n",
-      "pulling chunk 2\n",
-      "pulling chunk 3\n",
-      "pulling chunk 4\n",
-      "pulling chunk 5\n",
-      "pulling chunk 6\n",
-      "pulling chunk 7\n",
-      "pulling chunk 8\n",
-      "pulling chunk 9\n",
-      "pulling chunk 10\n",
-      "pulling chunk 11\n",
-      "pulling chunk 12\n",
-      "pulling chunk 13\n",
-      "pulling chunk 14\n",
-      "pulling chunk 15\n",
-      "pulling chunk 16\n",
-      "pulling chunk 17\n",
-      "pulling chunk 18\n",
-      "pulling chunk 19\n",
-      "pulling chunk 20\n",
-      "pulling chunk 21\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "gp_zoning_id = 'udk3-z2d5'\n",
     "gp_zoning = pull_df_from_socrata(gp_zoning_id)"
@@ -397,20 +310,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "pulling data in 1 chunks of 2240 rows each\n",
-      "pulling chunk 0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "gp_codes_id = 'vzcc-dhby'\n",
     "gp_codes = pull_df_from_socrata(gp_codes_id)"
@@ -452,23 +356,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "pulling data in 4 chunks of 100000 rows each\n",
-      "pulling chunk 0\n",
-      "pulling chunk 1\n",
-      "pulling chunk 2\n",
-      "pulling chunk 3\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "general_plan_id = 'cc3g-fj4w'\n",
     "general_plan = pull_df_from_socrata(general_plan_id)"
@@ -510,18 +402,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "pulling data in 1 chunks of 2979 rows each\n",
-      "pulling chunk 0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "rz_codes_id = 'qdrp-c5ra'\n",
     "rz_codes = pull_df_from_socrata(rz_codes_id)"
@@ -563,19 +446,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "pulling data in 2 chunks of 100000 rows each\n",
-      "pulling chunk 0\n",
-      "pulling chunk 1\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "regional_zoning_id = 'q2p6-hbrp'\n",
     "regional_zoning = pull_df_from_socrata(regional_zoning_id)"
@@ -612,9 +485,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3. EDA\n",
+    "## 2. EDA\n",
     "\n",
-    "Your exploratory data analysis steps go here:"
+    "Your exploratory data analysis steps go here:\n",
+    "\n",
+    "Example EDA steps: https://kite.com/blog/python/data-analysis-visualization-python\n",
+    "\n",
+    "Things to check for: unique values, data quality issues (e.g. misspellings, mismatches, etc.), missing values, data cleaning steps"
    ]
   },
   {
@@ -623,28 +500,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "jurisdict = 'PA'"
+    "# get descriptive statistics for all fields\n",
+    "urbansim_buildings.describe(include='all')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(0, 26)"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "jdf = gp_zoning.merge(gp_codes, left_on='zoning_id', right_on='recid')\n",
-    "jdf.shape"
+    "# check if this dataset contains null values\n",
+    "urbansim_buildings.isnull().values.any()"
    ]
   },
   {
@@ -652,28 +519,20 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# get number of null values per field\n",
+    "urbansim_buildings.isnull().sum()"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# visualize some categorical data\n",
+    "urbansim_buildings['fipco'].value_counts().plot.bar(title='FIPCO counts');"
+   ]
   }
  ],
  "metadata": {
