Update HCD Annual Progress Report Data Processing 2018-2019.ipynb

--- a/Project-Documentation/hcd/HCD Annual Progress Report Data Processing 2018-2019.ipynb
+++ b/Project-Documentation/hcd/HCD Annual Progress Report Data Processing 2018-2019.ipynb
@@ -4723,13 +4723,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Create function to calculate very income category permit count\n",
+    "#Create function to calculate income category permit count\n",
     "\n",
-    "def sum_vlow_income_ndr(row,co_col,bp_col,entitle_col):\n",
+    "def sum_permits_by_income(row,co_col,bp_col,entitle_col):\n",
     "    if (row[co_col] > 0):\n",
     "        return row[co_col]\n",
     "    elif (row[bp_col] > 0):\n",
@@ -4740,12 +4740,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [],
    "source": [
     "apr_bay_area_geo['MTC_VLOW_INCOME_NDR'] = apr_bay_area_geo.apply(lambda row: \n",
-    "                                                                 sum_vlow_income_ndr(row,\n",
+    "                                                                 sum_permits_by_income(row,\n",
     "                                                                                    'CO_VLOW_INCOME_NDR',\n",
     "                                                                                     'BP_VLOW_INCOME_NDR',\n",
     "                                                                                     'VLOW_INCOME_NDR'\n",
@@ -4755,7 +4755,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [
     {
@@ -4988,7 +4988,7 @@
        "[5 rows x 61 columns]"
       ]
      },
-     "execution_count": 131,
+     "execution_count": 134,
      "metadata": {},
      "output_type": "execute_result"
     }
