--- a/Project-Documentation/hcd/notebooks/HCD_APR_Summaries.ipynb
+++ b/Project-Documentation/hcd/notebooks/HCD_APR_Summaries.ipynb
@@ -253,7 +253,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "apr_certificates_df['mtc_co_total_units'] = (apr_certificates_df['co_vlow_income_dr'] +\n",
+    "                                             apr_certificates_df['co_vlow_income_ndr'] +\n",
+    "                                             apr_certificates_df['co_low_income_dr'] +\n",
+    "                                             apr_certificates_df['co_low_income_ndr'] +\n",
+    "                                             apr_certificates_df['co_mod_income_dr'] +\n",
+    "                                             apr_certificates_df['co_mod_income_ndr'] +\n",
+    "                                             apr_certificates_df['co_above_mod_income'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "summary_cols = ['jurs_name', \n",
+    "                'cnty_name',\n",
+    "                'mtc_year',\n",
+    "                'co_vlow_income_dr',\n",
+    "                'co_vlow_income_ndr',\n",
+    "                'co_low_income_dr',\n",
+    "                'co_low_income_ndr',\n",
+    "                'co_mod_income_dr',\n",
+    "                'co_mod_income_ndr',\n",
+    "                'co_above_mod_income',\n",
+    "                'mtc_co_total_units',\n",
+    "                'mtc_pda',\n",
+    "                'mtc_tpa']\n",
+    "group_cols = ['jurs_name', 'cnty_name','mtc_year','mtc_pda','mtc_tpa']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -287,7 +324,7 @@
        "      <th>co_mod_income_dr</th>\n",
        "      <th>co_mod_income_ndr</th>\n",
        "      <th>co_above_mod_income</th>\n",
-       "      <th>mtc_total_units</th>\n",
+       "      <th>mtc_co_total_units</th>\n",
        "      <th>mtc_pda</th>\n",
        "      <th>mtc_tpa</th>\n",
        "    </tr>\n",
@@ -305,7 +342,7 @@
        "      <td>0.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "    </tr>\n",
@@ -514,23 +551,23 @@
        "30862               0.0                0.0                  1.0   \n",
        "30863               0.0                0.0                  1.0   \n",
        "\n",
-       "       mtc_total_units mtc_pda mtc_tpa  \n",
-       "1                  0.0   False   False  \n",
-       "8                  1.0     NaN     NaN  \n",
-       "9                 20.0     NaN     NaN  \n",
-       "26                 1.0   False   False  \n",
-       "35                 1.0   False   False  \n",
-       "...                ...     ...     ...  \n",
-       "30859              1.0   False   False  \n",
-       "30860              1.0   False   False  \n",
-       "30861              1.0    True    True  \n",
-       "30862              1.0    True    True  \n",
-       "30863              1.0    True    True  \n",
+       "       mtc_co_total_units mtc_pda mtc_tpa  \n",
+       "1                     1.0   False   False  \n",
+       "8                     1.0     NaN     NaN  \n",
+       "9                    20.0     NaN     NaN  \n",
+       "26                    1.0   False   False  \n",
+       "35                    1.0   False   False  \n",
+       "...                   ...     ...     ...  \n",
+       "30859                 1.0   False   False  \n",
+       "30860                 1.0   False   False  \n",
+       "30861                 1.0    True    True  \n",
+       "30862                 1.0    True    True  \n",
+       "30863                 1.0    True    True  \n",
        "\n",
        "[12753 rows x 13 columns]"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -541,29 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "summary_cols = ['jurs_name', \n",
-    "                'cnty_name',\n",
-    "                'mtc_year',\n",
-    "                'co_vlow_income_dr',\n",
-    "                'co_vlow_income_ndr',\n",
-    "                'co_low_income_dr',\n",
-    "                'co_low_income_ndr',\n",
-    "                'co_mod_income_dr',\n",
-    "                'co_mod_income_ndr',\n",
-    "                'co_above_mod_income',\n",
-    "                'mtc_total_units',\n",
-    "                'mtc_pda',\n",
-    "                'mtc_tpa']\n",
-    "group_cols = ['jurs_name', 'cnty_name','mtc_year','mtc_pda','mtc_tpa']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -573,7 +588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -609,7 +624,7 @@
        "      <th>co_mod_income_dr</th>\n",
        "      <th>co_mod_income_ndr</th>\n",
        "      <th>co_above_mod_income</th>\n",
-       "      <th>mtc_total_units</th>\n",
+       "      <th>mtc_co_total_units</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -627,7 +642,7 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>56.0</td>\n",
-       "      <td>56.0</td>\n",
+       "      <td>67.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -659,7 +674,7 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>64.0</td>\n",
-       "      <td>64.0</td>\n",
+       "      <td>80.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -675,7 +690,7 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>2.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -691,7 +706,7 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -739,7 +754,7 @@
        "      <td>0.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>7.0</td>\n",
-       "      <td>7.0</td>\n",
+       "      <td>13.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>346</th>\n",
@@ -787,7 +802,7 @@
        "      <td>0.0</td>\n",
        "      <td>4.0</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>5.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -821,23 +836,36 @@
        "347                 0.0               0.0                0.0   \n",
        "348                 0.0               0.0                0.0   \n",
        "\n",
-       "     co_mod_income_dr  co_mod_income_ndr  co_above_mod_income  mtc_total_units  \n",
-       "0                 0.0                0.0                 56.0             56.0  \n",
-       "1                 0.0                0.0                  1.0              1.0  \n",
-       "2                 0.0                0.0                 64.0             64.0  \n",
-       "3                 0.0                0.0                  1.0              1.0  \n",
-       "4                 0.0                0.0                  0.0              0.0  \n",
-       "..                ...                ...                  ...              ...  \n",
-       "344               0.0                0.0                  1.0              1.0  \n",
-       "345               0.0                1.0                  7.0              7.0  \n",
-       "346               0.0                0.0                  9.0              9.0  \n",
-       "347               0.0                0.0                  1.0              1.0  \n",
-       "348               0.0                4.0                  1.0              1.0  \n",
+       "     co_mod_income_dr  co_mod_income_ndr  co_above_mod_income  \\\n",
+       "0                 0.0                0.0                 56.0   \n",
+       "1                 0.0                0.0                  1.0   \n",
+       "2                 0.0                0.0                 64.0   \n",
+       "3                 0.0                0.0                  1.0   \n",
+       "4                 0.0                0.0                  0.0   \n",
+       "..                ...                ...                  ...   \n",
+       "344               0.0                0.0                  1.0   \n",
+       "345               0.0                1.0                  7.0   \n",
+       "346               0.0                0.0                  9.0   \n",
+       "347               0.0                0.0                  1.0   \n",
+       "348               0.0                4.0                  1.0   \n",
+       "\n",
+       "     mtc_co_total_units  \n",
+       "0                  67.0  \n",
+       "1                   1.0  \n",
+       "2                  80.0  \n",
+       "3                   2.0  \n",
+       "4                   1.0  \n",
+       "..                  ...  \n",
+       "344                 1.0  \n",
+       "345                13.0  \n",
+       "346                 9.0  \n",
+       "347                 1.0  \n",
+       "348                 5.0  \n",
        "\n",
        "[349 rows x 13 columns]"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -848,11 +876,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
-    "apr_certificates_summary.to_csv('apr_certficates_by_affordability_growth_area_2018_2019.csv',index=False)"
+    "apr_certificates_summary.to_csv('../apr_certficates_by_affordability_growth_area_2018_2019.csv',index=False)"
    ]
   },
   {
